--- a/components/Layout/Burger/Menu/Menu.module.scss
+++ b/components/Layout/Burger/Menu/Menu.module.scss
@@ -5,6 +5,10 @@
 	width: 100%;
 	height: 100%;
 
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
 	background-color: $bgColor;
 	right: 0;
 	opacity: 0;
@@ -38,6 +42,8 @@
 		justify-content: space-between;
 
 		padding: 7px 16px;
+
+		border-bottom: 1.5px solid currentColor;
 
 		@include tablet {
 			padding: 7px 32px;
@@ -79,13 +85,11 @@
 	}
 
 	.main {
-		margin: 40px auto;
+		margin: 0 auto;
 	}
 
 	.footer {
-		position: fixed;
-		bottom: 0;
-		left: 0;
+		border-top: 1.5px solid currentColor;
 
 		width: 100%;
 		padding: 24px 0;
@@ -96,7 +100,7 @@
 		gap: 24px;
 
 		@include tablet {
-			padding: 40px 0;
+			padding: 10px 0 40px;
 		}
 
 		.rights {
@@ -116,7 +120,11 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 32px;
+		gap: 20px;
+
+		@include tablet {
+			gap: 25px;
+		}
 	}
 
 	.link {
